--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,10 @@
     "axios": "^1.5.0",
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
