--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,10 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.0",
-        "mongoose": "^7.0.0"
+        "mongoose": "^7.0.0",
+        "tailwindcss": "^3.4.0"
     },
     "devDependencies": {
-        "nodemon": "^2.0.20"
+        "nodemon": "^3.0.2"
     }
 }
