--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,8 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node server.js",
-        "dev": "nodemon server.js"
+        "dev": "nodemon server.js",
+        "test": "jest --forceExit"
     },
     "dependencies": {
         "bcrypt": "^5.1.0",
@@ -16,6 +17,8 @@
         "tailwindcss": "^3.4.0"
     },
     "devDependencies": {
-        "nodemon": "^3.0.2"
+        "jest": "^29.7.0",
+        "nodemon": "^3.0.2",
+        "supertest": "^7.0.0"
     }
 }
