--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
+    "react-simple-wysiwyg": "^3.0.2",
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
