--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,5 @@
 {
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node server.js",
         "dev": "nodemon server.js",
         "test": "jest --forceExit"
@@ -13,12 +12,13 @@
         "express": "^4.18.2",
         "express-async-errors": "^3.1.1",
         "jsonwebtoken": "^9.0.0",
-        "mongoose": "^8.3.2",
-        "tailwindcss": "^3.4.0"
+        "mongoose": "^8.5.2",
+        "passport": "^0.7.0",
+        "passport-discord-auth": "^1.1.1"
     },
     "devDependencies": {
         "jest": "^29.7.0",
-        "nodemon": "^3.0.2",
+        "nodemon": "^3.1.4",
         "supertest": "^7.0.0"
     }
 }
