--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
-        "express": "^5.0.0-beta.3",
+        "express": "^5.0.0",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^8.5.2",
         "passport": "^0.7.0",
