--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query-devtools": "^4.36.1",
     "axios": "^1.5.0",
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
