--- a/server/package.json
+++ b/server/package.json
@@ -5,11 +5,11 @@
         "test": "jest --forceExit"
     },
     "dependencies": {
-        "bcrypt": "^5.1.0",
+        "bcryptjs": "^3.0.2",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
-        "express": "^5.0.0",
+        "express": "^5.0.1",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^8.5.2"
     },
