feat: some small changes
- Add transaction for close/copy board
- Fix cannot create card
- Fix cannot drag items on mobile device

--- a/server/.env.example
+++ b/server/.env.example
@@ -8,7 +8,7 @@ DISCORD_SECRET_ID=
 
 MODE=development
 DOMAIN=onrender.com
-SERVER_URL=localhost:3001
-FRONTEND_URL=localhost:5173
-VITE_SERVER_URL=localhost:3001
-VITE_SOCKET_URL=localhost:3000
+SERVER_URL=http://localhost:3001
+FRONTEND_URL=http://localhost:5173
+VITE_SERVER_URL=http://localhost:3001
+VITE_SOCKET_URL=http://localhost:3000
