--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
         "dotenv": "^16.0.3",
         "express": "^5.0.1",
         "jsonwebtoken": "^9.0.0",
-        "mongoose": "^8.5.2"
+        "mongoose": "^8.5.2",
+        "socket.io": "^4.8.1"
     },
     "devDependencies": {
         "jest": "^29.7.0",
